# anchor-sentinel

./: .gitignore  Cargo.toml  README.md  demo.tape  sentinel.example.toml  tarpaulin-report.html
.github/actions/scan/: action.yml
.github/workflows/: ci.yml  pages.yml  scan.yml  security.yml
docs/: README.md  ci.md  cli.md  rules.md
pkg/: README.md  anchor_sentinel.d.ts  anchor_sentinel.js  anchor_sentinel_bg.wasm  anchor_sentinel_bg.wasm.d.ts  package.json
playground/: README.md
playground/pkg/: README.md  anchor_sentinel_bg.wasm  package.json
scripts/: fetch-fixtures.sh
site/: .gitignore  package-lock.json  package.json
site/public/: robots.txt
site/src/app/: globals.css  layout.tsx  page.tsx
src/: cli.rs  config.rs  lib.rs  loader.rs  main.rs
src/ast/: accounts_struct.rs  instruction_fn.rs  mod.rs
src/engine/: mod.rs  registry.rs
src/idl/: ir.rs  mod.rs  v29.rs  v30.rs  v31.rs
src/report/: explain.rs  json.rs  mod.rs  sarif.rs  spinner.rs  text.rs  tty.rs
src/rules/: cpi_signer_seed_validation.rs  duplicate_mutable_accounts.rs  integer_cast_truncation.rs  lamports_drain.rs  missing_balance_check.rs  missing_bump_seed_canonicalization.rs  missing_close_authority.rs  missing_mut.rs  missing_ownership.rs  missing_reinit_guard.rs  missing_signer.rs  mod.rs  pda_misconfig.rs  unchecked_balance_flow.rs  unsafe_arithmetic.rs
tests/: integration.rs  snapshots.rs
tests/fixtures/balance-drain-vulnerable/programs/drain-vault/src/: lib.rs
tests/fixtures/cpi-clean/programs/cpi_vault/src/: lib.rs
tests/fixtures/public/pda-insecure/programs/pda-insecure/src/: lib.rs
tests/fixtures/public/pda-secure/programs/pda-secure/src/: lib.rs
tests/fixtures/reinit-clean/programs/reinit_vault/src/: lib.rs
tests/fixtures/reinit-vulnerable/programs/reinit_vault/src/: lib.rs
tests/fixtures/vault-clean/programs/vault/src/: lib.rs
tests/fixtures/vault-vulnerable/programs/vault/src/: lib.rs
tests/snapshots/: snapshots__balance_drain_vulnerable.snap  snapshots__clean_pda.snap  snapshots__clean_vault.snap  snapshots__pda_insecure.snap  snapshots__reinit_vulnerable.snap  snapshots__sarif_vulnerable_vault.snap  snapshots__vulnerable_vault.snap
tests/unit/: config_tests.rs  engine_tests.rs  explain_tests.rs  idl_tests.rs  mod.rs  rule_tests.rs
