[package]
name = "anchor-sentinel"
version = "0.1.0"
edition = "2021"
description = "Static security analysis CLI for Solana Anchor programs"
license = "MIT OR Apache-2.0"
repository = "https://github.com/eniyanyosuva/anchor-sentinel"
readme = "README.md"
keywords = ["solana", "anchor", "security", "static-analysis", "cli"]
categories = ["command-line-utilities", "development-tools::cargo-plugins"]

[[bin]]
name = "sentinel"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
syn = { version = "2.0", features = ["full", "visit", "extra-traits"] }
proc-macro2 = "1.0"
quote = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
walkdir = "2.5"
colored = "2.1"
inventory = "0.3"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"
insta = { version = "1.40", features = ["json"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
