[package]
name = "anchor-sentinel"
version = "0.4.0"
edition = "2021"
description = "Static security analysis CLI for Solana Anchor programs"
license = "MIT"
repository = "https://github.com/eniyanyosuva/anchor-sentinel"
homepage = "https://github.com/eniyanyosuva/anchor-sentinel"
readme = "README.md"
keywords = ["solana", "anchor", "security", "static-analysis", "blockchain"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "sentinel"
path = "src/main.rs"

[lib]
name = "anchor_sentinel"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
syn = { version = "2.0", features = ["full", "visit", "extra-traits"] }
proc-macro2 = { version = "1.0", features = ["span-locations"] }
quote = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
walkdir = "2.5"
colored = "2.1"
inventory = "0.3"

# `ctrlc` doesn't compile for wasm32 (no signals there). We only
# need Ctrl+C handling for the native CLI binary.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ctrlc = "3"
is-terminal = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"
insta = { version = "1.40", features = ["json"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"

# Disable wasm-opt: the bundled version of binaryen used by wasm-pack
# rejects the memory.copy operations produced by recent rustc/LLVM
# because they don't carry the bulk-memory feature flag. The build
# still produces a working .wasm file — we just skip the size pass.
[package.metadata.wasm-pack.profile.release]
wasm-opt = false
